<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2016 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_formula_editor_list_item"
    style="@style/sound_fragment_main"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/button_background_selector"
    android:gravity="center_vertical"
    android:paddingLeft="10dp"
    android:paddingRight="6dp"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textColor="@color/sound_fragment_text_main_color" />

