...
        app:horizontalSpacing="@dimen/brick_flow_layout_horizontal_spacing"
        app:verticalSpacing="@dimen/brick_flow_layout_vertical_spacing" >

        <TextView
            android:id="@+id/brick_change_size_by_label"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_change_size_by" >
        </TextView >

        <TextView
            android:id="@+id/brick_change_size_by_prototype_text_view"
            style="@style/BrickPrototypeTextView" >
        </TextView >

        <TextView
            android:id="@+id/brick_change_size_by_edit_text"
            style="@style/BrickEditText"
            app:layout_inputType="number"
            app:layout_textField="true"
            android:maxEms="5" >
        </TextView >

...
